# BoardGameAI

./: BoardGameEngine.sln  CMakeLists.txt  README.md  license.txt
BoardGameEngine/: AbstractBoardGame.cpp  AbstractBoardGame.h  BoardGame.h  BoardGameAI.cpp  BoardGameAI.h  BoardGameEngine.vcxproj  BoardGameEngine.vcxproj.filters  Move.cpp  Move.h  MoveList.cpp  MoveList.h  MovePicker.h  ReadMe.txt  TTEntry.h  TTableReplaceByDepth.h  Trace.cpp  Trace.h  TraceOutput.cpp  TraceOutput.h  TraceOutputNode.cpp  TraceOutputNode.h  stdafx.cpp  types.h
BoardGameEngine/Test/: BoardGameEngine.idb
BoardGameEngine/Test/BoardGameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
BoardGameEngineCatchTest/: BoardGameEngineCatchTest.vcxproj  BoardGameEngineCatchTest.vcxproj.filters  Connect4AITest.cpp  Connect4LogicTest.cpp  TestMain.cpp  catch.hpp  stdafx.cpp
BoardGameEngineTest/: BoardGameAITest.cpp  BoardGameEngineTest.sln  BoardGameEngineTest.vcxproj  BoardGameEngineTest.vcxproj.filters  Connect4GameTest.cpp  TestGame.cpp  TestGame.h
BoardGameEngineTest/BoardGameEngineTest/: BoardGameAITest.cpp  BoardGameEngineTest.vcxproj  TestGame.cpp  TestGame.h  resource.h  stdafx.cpp
BoardGameEngineTest/BoardGameEngineTest/Test/: vc140.idb
BoardGameEngineTest/BoardGameEngineTest/Test/BoardGam.9262D296.tlog/: BoardGameEngineTest.write.1u.tlog  CL.command.1.tlog  link.read.1.tlog  rc.write.1.tlog
BoardGameEngineTest/Test/BoardGam.9262D296.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog
BoardGameUI/: BoardGameUI.cpp  BoardGameUI.vcxproj  BoardGameUI.vcxproj.filters  ReadMe.txt  stdafx.cpp
BoardGameUI/BoardGameUI/: BoardGameUI.vcxproj  BoardGameUI.vcxproj.filters
BoardGames/: BoardGames.vcxproj  BoardGames.vcxproj.filters  Connect4Game.cpp  Connect4Game.h  ReadMe.txt
BoardGames/BoardGames/: BoardGames.vcxproj  Connect4Game.cpp  stdafx.cpp
BoardGames/BoardGames/Test/BoardGames.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
BoardGames/Test/: BoardGames.idb
BoardGames/Test/BoardGames.tlog/: BoardGames.lastbuildstate  CL.read.1.tlog
Test/: BoardGameEngine.lib  BoardGameEngineTest.exp  BoardGameEngineTest.lib  BoardGames.lib
docs/: SearchExtensions.md
libs/BoardGameAI/: CMakeLists.txt
libs/BoardGameAI/include/: BoardGame.h  BoardGameAI.h  MoveList.h  MovePicker.h  SmartVector.h  StaticVector.h  StatusUpdate.h  TTableReplaceByDepth.h  Trace.h  TraceOutput.h  types.h
libs/BoardGameAI/src/: dummy.cpp
libs/BoardGameEngine/: CMakeLists.txt
libs/BoardGameEngine/include/: BoardGame.h  BoardGameAI.h  MovePicker.h  types.h
libs/BoardGameEngine/src/: TraceOutputNode.cpp
libs/BoardGames/: CMakeLists.txt
libs/BoardGames/include/: Connect4Game.h
libs/BoardGames/src/: Connect4Game.cpp
libs/BoardGames/test/: CMakeLists.txt  Connect4LogicTest.cpp
libs/Catch/: CMakeLists.txt
src/: BoardGameUI.cpp
src/BoardGameAIBenchmark/: CMakeLists.txt
src/BoardGameAIBenchmark/include/: AbstractBenchmark.h  BenchmarkManager.h  CSVIterator.h  CSVRow.h  LiveBenchmark.h  RecordedBenchmark.h
src/BoardGameAIBenchmark/src/: Benchmark.cpp
src/BoardGameAIBenchmark/testdata/: IterativeTTAI static eval.csv  IterativeTTAI static eval2.csv  IterativeTTAI.csv  TTAI.csv  Test_L2_R1
src/BoardGameConsoleApp/: CMakeLists.txt
src/BoardGameConsoleApp/src/: BoardGameConsoleApp.cpp
test/: CMakeLists.txt  Connect4AITest.cpp
